# inkpath

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: push.yml
docker/: Dockerfile  README.md  msys2.sh
plugin/: main.lua
scripts/: win_install_plugin.ps1  win_uninstall_plugin.ps1
